--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1>Quiz em HTML</h1>
     <h2>Seja bem-vindo ao Quiz, clique na imagem logo abaixo para começar!</h2>
     <a href="./nivel1.html" target="_blank">
-        <img src="./start.png" alt="Logo de Start">
+        <img src=".https://github.com/Mertz8bit/quiz/blob/main/start.png" alt="Logo de Start">
     </a>
 </body>
 </html>
